fix: fixed missing scrollbar issue

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -7,37 +7,21 @@
   font-family: var(--main-font);
   text-align: center;
   scroll-behavior: smooth;
-
 }
 
- body::-webkit-scrollbar {
-   display: none;
-   width: 0;
- }
-
-/*body{*/
-/*  scrollbar-width: thin;          !* "auto" or "thin" *!*/
-/*  */
-/*}*/
-
-
-*::-webkit-scrollbar {
-  width: 0px;
+::-webkit-scrollbar {
+  width: 10px;
 }
 
-/**::-webkit-scrollbar-thumb:hover {*/
-/*  background: var(--pallete-light)*/
-/*} */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--pallete-light)
+}
 
-/**::-webkit-scrollbar-thumb {*/
-/*  background: var(--pallete-dark);*/
-/*  background:  var(--pallete-light);*/
-/*  !* background: linear-gradient( 180deg, var(--pallete-dark), var(--pallete-light)); *!*/
-/*  border-radius: 10px;*/
-/*}*/
+::-webkit-scrollbar-thumb {
+  background: linear-gradient( 180deg, var(--pallete-dark), var(--pallete-light));
+  border-radius: 10px;
+}
 
-/**::-webkit-scrollbar-corner{*/
-/*  size: 0;*/
-/*}*/
-
-
+::-webkit-scrollbar-corner{
+ size: 0;
+}
